--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,7 @@ body {
 }
 
 .header {
+	color: white;
 		
 }
 
@@ -40,7 +41,7 @@ p {
 h1 {
 	margin: 0;
 	padding: 10px;
-	background-color: green;
+	background-color: dodgerblue;
 	text-align: center;
 }
 
@@ -51,10 +52,10 @@ h2 {
 
 
 img {	
-	width: 20%;
-	height: 20%;
+	width: 30%;
+	height: 30%;
 	float:right;
-	margin: 10px;
+	margin: 20px;
 	box-shadow: 5px 5px 3px grey;
 	
 }
