--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@
 body {
 	background-color: aliceblue;
 	font-family: arial, helvetica, san-serif;
-	font-size: 13px;
+	font-size: 16px;
 }
 
 .container {
@@ -29,8 +29,9 @@ body {
 	min-height: 200px;
 }
 
-.aside {
-	
+.interests {
+	font-family: arial, helvetica, san-serif;
+	font-size: 13px;
 }
 
 p {
@@ -46,9 +47,13 @@ h1 {
 
 h2 {
 	padding: 10px;
+	
+}
+
+h3 {
+	padding: 10px;
 }
 	
-
 
 img {	
 	width: 30%;
